feat: add package yaml
